src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Actual_Admission_Date__c</fullName>
        <description>Actual admission date for inpatient prior auth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Discharge_Date__c</fullName>
        <description>Actual discharge date or inpatient prior auth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addressed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a family engagement center user has addressed the notification.</description>
        <inlineHelpText>Check if the notification has been addressed.</inlineHelpText>
        <label>Addressed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canceled_Reason__c</fullName>
        <description>Reason the transaction is canceled</description>
        <label>Canceled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case Opened on Wrong Member</fullName>
                </value>
                <value>
                    <fullName>Change in Review Priority</fullName>
                </value>
                <value>
                    <fullName>Duplicate Notification</fullName>
                </value>
                <value>
                    <fullName>I&amp;E Criteria Not Met</fullName>
                </value>
                <value>
                    <fullName>Ineligible for SNI</fullName>
                </value>
                <value>
                    <fullName>Member Ineligible for Benefits</fullName>
                </value>
                <value>
                    <fullName>Member Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Modified Level of Care</fullName>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                </value>
                <value>
                    <fullName>Other Payer</fullName>
                </value>
                <value>
                    <fullName>Provider Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Request Submitted Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Service Not Rendered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Member Date of Birth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Outcome__c</fullName>
        <description>Decision of Prior Authorization</description>
        <label>Decision Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved</fullName>
                </value>
                <value>
                    <fullName>Not/Covered/Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denied_Clinical_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when a service line has a Decision Outcome of Denied - Clinical and Reason is Lack of Medical Necessity triggering a notification</description>
        <label>Denied - Clinical Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Med_Nec__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when a service line has a Decision Outcome of Denied - Clinical and Reason is Lack of Medical Necessity</description>
        <label>Denied - Med Nec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnosis_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Diagnosis code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF( OR(ISPICKVAL(Service_Setting__c , &apos;Outpatient&apos;),ISPICKVAL(Service_Setting__c , &apos;Outpatient Facility&apos;)), Service_End_Date__c,
if( ISPICKVAL(Service_Setting__c,&apos;Inpatient&apos;),if( and (ISNULL( Actual_Discharge_Date__c),ISNULL( Actual_Admission_Date__c)),Expected_Discharge_Date__c,Actual_Discharge_Date__c), null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if prior authorization is escalated.</description>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Admission_Date__c</fullName>
        <description>Expected admission date for inpatient prior auth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Discharge_Date__c</fullName>
        <description>Expected discharge date for inpatient prior auth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gap_Exception_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if it is for a Gap Exception</description>
        <label>Gap Exception Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSC_Unique_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HSC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_System_Date_and_Time__c</fullName>
        <description>The date and time the transaction was updated in the host system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Host System Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ITE_Status__c</fullName>
        <description>ITE Translated Status</description>
        <label>ITE Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Reconsideration</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Director__c</fullName>
        <description>Name of MD when status is MD Review</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Director</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>Member ID of family in SNI program and Styx Dashboard.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>E&amp;I = Member ID
C&amp;S = Medicaid Number</inlineHelpText>
        <label>Member ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Violated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when a work order has a milestone in the violated status.</description>
        <label>Milestone Violated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinutesBenefitCoverageDetermination__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the Benefit Coverage Determination status.</description>
        <label>Minutes Benefit Coverage Determination</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutesClinicalReview__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the Prior Authorization Received status.</description>
        <label>Minutes Clinical Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutesMDReview__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the MD Review status.</description>
        <label>Minutes MD Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutesPeerToPeerReview__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the Peer To Peer Review status.</description>
        <label>Minutes Peer To Peer Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutesPriorAuthorizationReceived__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the Prior Authorization Received status.</description>
        <label>Minutes Prior Authorization Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutesRequestedMissingInformation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the Requested Missing Information status.</description>
        <label>Minutes Requested Missing Information</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_ITE_On_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the ITE On Hold status.</description>
        <label>Minutes ITE On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_ITE_Processing__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the ITE Processing status.</description>
        <label>Minutes ITE Processing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_ITE_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Minutes a work order has been in the ITE Received status.</description>
        <label>Minutes ITE Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Service_Lines_Denied_Clinical_Evidenc__c</fullName>
        <description>Number of service lines that are denied clinical review with reason of Treatment is not consistent with published clinical evidence</description>
        <label>No Service Lines Denied Clinical Evidenc</label>
        <summaryFilterItems>
            <field>Service_Lines__c.Reason__c</field>
            <operation>equals</operation>
            <value>Treatment is not consistent with published clinical evidence.</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Lines__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Service_Lines_Denied_Lack_Of_Med_Nec__c</fullName>
        <description>rolls up the number of lines that have been Denied Clinical with Reason of Lack Of Medical Necessity</description>
        <label>No Service Lines Denied Lack Of Med Nec</label>
        <summaryFilterItems>
            <field>Service_Lines__c.Reason__c</field>
            <operation>equals</operation>
            <value>Lack of Medical Necessity</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Lines__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Completed_Service_Lines__c</fullName>
        <description>Number of service lines that have an Outcome and Outcome Reason selected.</description>
        <label>No of Completed Service Lines</label>
        <summaryFilterItems>
            <field>Service_Lines__c.Decision_Outcome__c</field>
            <operation>notEqual</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Lines__c.Reason__c</field>
            <operation>notEqual</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Lines__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <description>Date/Time of the work order notification.  Used to sort on the notification list view</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user that is assigned to research the notification of a work order.</description>
        <inlineHelpText>Family Engagement Center user assigned to research the work order.</inlineHelpText>
        <label>Notification Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>A Family Engagement Center user must be selected.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Family Engagement Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when a work order has been put into an On Hold status and triggered a notification.</description>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <description>Restriction for offshore to not handle work order</description>
        <label>Onshore Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Place_of_Service__c</fullName>
        <description>Place of service for the prior authorization</description>
        <label>Place of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acute Hospital</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Center</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Hospice</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Inpatient Rehab</fullName>
                </value>
                <value>
                    <fullName>Intensive Outpatient</fullName>
                </value>
                <value>
                    <fullName>Observation</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
                <value>
                    <fullName>Outpatient Facility</fullName>
                </value>
                <value>
                    <fullName>Part Hospitalization</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing Fac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <description>Policy ID for the subscriber of the family.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Policy ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predetermination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if this is a Predetermination</description>
        <label>Predetermination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Auth_Owner__c</fullName>
        <description>Owner of the Prior Auth in ICUE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Auth Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Date_Value__c</fullName>
        <description>Field to capture the date and time the ITE Status was changed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Date Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Outcome Reason</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits Exhausted</fullName>
                </value>
                <value>
                    <fullName>Case opened on wrong member</fullName>
                </value>
                <value>
                    <fullName>Change in Review Priority</fullName>
                </value>
                <value>
                    <fullName>Claims processing error</fullName>
                </value>
                <value>
                    <fullName>Credentialing Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate notification</fullName>
                </value>
                <value>
                    <fullName>Duplicate Service</fullName>
                </value>
                <value>
                    <fullName>Entered on wrong member</fullName>
                </value>
                <value>
                    <fullName>I&amp;E Criteria Not Met</fullName>
                </value>
                <value>
                    <fullName>Infusion Site of Care</fullName>
                </value>
                <value>
                    <fullName>Initially not covered as ineligible/eligibility established</fullName>
                </value>
                <value>
                    <fullName>Lack of Medical Necessity</fullName>
                </value>
                <value>
                    <fullName>Medical equipment which cannot withstand repeated use AND is not disposable, AND is used to serve a medical purpose, AND is generally not useful to a person in the absence of a Sickness or Injury, AND is appropriate for use in the home.</fullName>
                </value>
                <value>
                    <fullName>Medical equipment which can withstand repeated use AND is not disposable, AND is used to serve a medical purpose, AND is generally not useful to a person in the absence of a Sickness or Injury, AND is appropriate for use in the home.</fullName>
                </value>
                <value>
                    <fullName>Member ineligible for benefits</fullName>
                </value>
                <value>
                    <fullName>Member Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Modified Level of Care</fullName>
                </value>
                <value>
                    <fullName>Non-network - services are available/accessible in network -(No OON Benefits)</fullName>
                </value>
                <value>
                    <fullName>Notification not required</fullName>
                </value>
                <value>
                    <fullName>Other Payer</fullName>
                </value>
                <value>
                    <fullName>Provider is a contracted network provider/services are OON</fullName>
                </value>
                <value>
                    <fullName>Provider Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Request Submitted Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Second opinion</fullName>
                </value>
                <value>
                    <fullName>Service not rendered</fullName>
                </value>
                <value>
                    <fullName>Services are being provided for the primary purpose of improving or restoring physiologic function.</fullName>
                </value>
                <value>
                    <fullName>Services are not being provided for the primary purpose of improving or restoring physiologic function.</fullName>
                </value>
                <value>
                    <fullName>Services are not covered due to specific exclusions or limitations in member&apos;s benefit document</fullName>
                </value>
                <value>
                    <fullName>Services do not require a skilled/licensed professional.</fullName>
                </value>
                <value>
                    <fullName>Services provided are for the purpose of preventing, diagnosing, or treating a sickness, injury, substance abuse or their symptoms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <label>Service Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergent</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Detail__c</fullName>
        <description>Service Detail for the Prior Authorization</description>
        <label>Service Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiac Rehab</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Custodial</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Testing</fullName>
                </value>
                <value>
                    <fullName>Dialysis</fullName>
                </value>
                <value>
                    <fullName>DME</fullName>
                </value>
                <value>
                    <fullName>HCBS</fullName>
                </value>
                <value>
                    <fullName>Home Services</fullName>
                </value>
                <value>
                    <fullName>Hospice</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Infertility Benefit</fullName>
                </value>
                <value>
                    <fullName>Infusion Services</fullName>
                </value>
                <value>
                    <fullName>Intensive Srvces Del</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Long Term Acute Care</fullName>
                </value>
                <value>
                    <fullName>Long Term Care</fullName>
                </value>
                <value>
                    <fullName>Maternity</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medications</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>NICU</fullName>
                </value>
                <value>
                    <fullName>Occupational Therapy</fullName>
                </value>
                <value>
                    <fullName>Orthotics</fullName>
                </value>
                <value>
                    <fullName>Pain Management</fullName>
                </value>
                <value>
                    <fullName>PAT Skilled Nursing</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy</fullName>
                </value>
                <value>
                    <fullName>Private Duty Nursing</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Reference__c</fullName>
        <description>Service Reference number for the prior authorization</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Reference #</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Setting__c</fullName>
        <description>Indicates the type of Prior Authorization</description>
        <label>Service Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inpatient</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
                <value>
                    <fullName>Outpatient Facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Servicing_Provider_Name_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Servicing Provider Name/Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Needs_Status__c</fullName>
        <label>Special Needs Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>IF( OR(ISPICKVAL(Service_Setting__c , &apos;Outpatient&apos;),ISPICKVAL(Service_Setting__c , &apos;Outpatient Facility&apos;)), Service_Start_Date__c ,
if( ISPICKVAL(Service_Setting__c,&apos;Inpatient&apos;),if( and(ISNULL(Actual_Admission_Date__c ),ISNULL( Actual_Discharge_Date__c)) ,Expected_Admission_Date__c ,Actual_Admission_Date__c), null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusLastModifiedDate__c</fullName>
        <description>Date the Status Detail was last modified.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>StatusLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prior Authorization Received</fullName>
                </value>
                <value>
                    <fullName>Benefit Coverage Determination</fullName>
                </value>
                <value>
                    <fullName>Clinical Review</fullName>
                </value>
                <value>
                    <fullName>MD Review</fullName>
                </value>
                <value>
                    <fullName>Decision has been made</fullName>
                </value>
                <value>
                    <fullName>Peer to Peer Scheduled</fullName>
                </value>
                <value>
                    <fullName>Requested Missing Information</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Reconsideration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppress_Notifications__c</fullName>
        <description>If procedure code on the service lines needs to suppress the notification.</description>
        <label>Suppress Notifications</label>
        <summaryFilterItems>
            <field>Service_Lines__c.Suppress_Notifications__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Lines__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_Benefit_Coverage_Determination__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( MinutesBenefitCoverageDetermination__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(MinutesBenefitCoverageDetermination__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(MinutesBenefitCoverageDetermination__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Benefit Coverage Determination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_ITE_On_Hold__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( Minutes_ITE_On_Hold__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(Minutes_ITE_On_Hold__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(Minutes_ITE_On_Hold__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time ITE On Hold</label>
        <type>Text</type>
    </fields>
</CustomObject>